CSS/style.css
/* Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
}

/* Variables */
:root{
    --main-color: #54b689;
    --main-text-color: #fff;
    --border-color: #999;
    --bio-background-color: #1E2A3A;
    --bio-border-color: #293544;
    --about-background-color: #111821;
}

/* General */
.highlight{
    color: var(--main-color);
    font-weight: bolder;
    font-style: italic;
}

/* Containers */
#container {
    display: flex;
    flex-direction: row;
    color: var(--main-text-color);
}

/* Bio Container*/

#bio-container {
    flex: 1 1 20%;
    min-height: 100vh;
    background-color: var(--bio-background-color);
    text-align: center;
    padding: 30px 12px;
    border-right: 5px solid var(--bio-border-color)
}

#bio-image {
    width: 225px;
    height: 225px;
    border-radius:50%;
    margin-bottom: 25px;
    margin-top: 25px;
}

#bio-container p {
    margin-bottom: 20px;
}

#bio-container #welcome-text {
    font-weight: bold;
}

#social-container {
    display: flex;
    justify-content: center;
    list-style: none;
    border-bottom: 1px var(--border-color);
    margin-bottom: 25px;
    padding-bottom: 10px;
    border-bottom: 2px solid var(--border-color);
}

#social-container li {
    flex: 1 1 0;
    max-width: 60px;
}

#social-container li a{
    color: var(--main-color);
    font-size: 35px;
}

#social-container ion-icon:hover{
    transform: scale(1.4);
}

#email-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#email-container ionc-icon,
#email-container a{
    flex: 1 1 0;
}

#email-container a{
    color: var(--main-text-color);
    text-decoration: none;
    max-width: 225px;
}

#email-container #email-logo{
    color: var(--main-color);
    font-size: 25px;
    margin-right: 5px;
    max-width: 25px;
    max-height: 25px;
}

/*About container*/
#about-container{
    flex: 1 1 80%;
    min-height: 100vh;
    background-color: var(--about-background-color);
    padding: 50px;
}

#about-container .italic-span a{
    font-style: italic;
    font-weight:bolder;
    text-underline-offset: 4px;
    text-decoration: 3px solid underline var(--main-color);
    color: var(--main-text-color);
    transition: 0.3s;
}

#about-container .italic-span a:hover{
    font-size: 18px;
}

.description .highlight-subject{
    color: var(--main-color);
    font-style: italic;
}

#name{
    font-size: 42px;
    margin-bottom: 15px;
}

#title{
    font-size: 24px;
    margin-bottom: 15px;
    font-weight: bold;
}

.description{
    max-width: 75%;
    margin-bottom: 10px;
}

#buttons-informations .btn-info{
    display: inline-block;
    margin-right: 25px;
}

.btn-info{
    font-weight: bold;
    font-size: 16px;
    color: var(--main-text-color);
    background-color: var(--main-color);
    border: 2px solid var(--main-color);
    border-radius: 5px;
    text-decoration: none;
    transition: .5s;
    margin: 25px 0;
    padding: 15px 15px;
    width: 160px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.btn-info ion-icon,
.btn-info span{
    display: inline-block 1 1 0;
    vertical-align: middle;
    margin-right: 5px;
}

.btn-info ion-icon{
    font-size: 20px;
    max-width: 20px;
}

.btn-info:hover{
    background-color: transparent;
    border-radius: 30px;
    box-shadow: 0px 0px 25px -10px var(--main-color);
    transform: scale(1.1);
    width: 175px;
}

#skills-section-title {
    border-top: 2px solid var(--border-color);
    padding-top: 20px;
    margin-bottom: 20px;
    font-size: 32px;
}

.skills-container{
    display: flex;
    flex-wrap: wrap;
    margin-top: 25px;
}

.skills-box{
    flex: 1 1 33%;
    max-width: 33%;
    margin-bottom: 35px;
}

.skill-title{
    font-size: 24px;
    margin-bottom: 25px;
    font-weight: bold;
    padding-left: 10px;
    border-left: 5px solid var(--main-color);
}

.skills-box i{
    font-size: 55px;
    margin-right: 12px;
}

/* Mobile */
@media(max-width: 450px){
    #container {
        flex-direction: column;
    }

    #bio-container{
        min-height: auto;
        border-right: none;
        border-bottom: 5px solid var(--bio-border-color)
    }

    #bio-container h1{
        display: none;
    }

    #bio-container #bio-image{
        width: 250px;
        height: 250px;
        border-radius:50%;
        margin-bottom: 5px;
        margin-top: 5px;
    }

    #bio-container #bio-image{
        width: 250px;
        height: 250px;
        border-radius:50%;
        margin-bottom: 5px;
        margin-top: 5px;
    }

    #bio-container p{
        max-width: 60%;
        margin: 10px auto;
    }

    #about-container{
        text-align: center;
        padding: 30px;
    }

    #about-container .description{
        margin: 15px auto;
        max-width: 100%;
        line-height: 30px;
        text-align: left;
    }

    .btn-info{
        margin: 20px auto;
    }

    .skills-box{
        flex: 1 1 100%;
        max-width: 100%;
        margin-bottom: 18px;
        text-align: left;
        font-size: 60px;
    }
}

